tests/transpiler/x/rb/group_by_sort.rb
# Generated by Mochi transpiler v0.10.34 on 2025-07-21 22:29 +0700
ItemsItem = Struct.new(:cat, :val, keyword_init: true)
items = [ItemsItem.new(cat: "a", val: 3), ItemsItem.new(cat: "a", val: 1), ItemsItem.new(cat: "b", val: 5), ItemsItem.new(cat: "b", val: 2)]
Grouped = Struct.new(:cat, :total, keyword_init: true)
grouped = (begin
  groups = {}
  items.each do |i|
    k = i.cat
    groups[k] ||= []
    groups[k] << {"i" => i}
  end
  pairs = groups.to_a
  pairs = pairs.each_with_index.sort_by do |(k, items), __i|
    g = { "key" => k, "items" => items }
    [-(begin
      _res = []
      g["items"].each do |x|
        _res << x["val"]
      end
    _res
  end).sum, __i]
end.map{ |x, _| x }
result = []
pairs.each do |k, items|
  g = { "key" => k, "items" => items }
  result << Grouped.new(cat: g["key"], total: (begin
    _res = []
    g["items"].each do |x|
      _res << x["val"]
    end
  _res
end).sum)
end
result
end)
puts(("[" + (grouped).map{ |x| x.is_a?(String) ? '\'' + x + '\'' : x.to_s }.join(', ') + "]"))
